--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "travlr",
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "Travlr Getaways",
+  "author": "Eric Singleterry",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
@@ -13,6 +15,6 @@
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.19"    
+    "nodemon": "^2.0.19"
   }
 }
